More corrections to spacing with selected document header

--- a/src/sass/document-detail.scss
+++ b/src/sass/document-detail.scss
@@ -1,6 +1,6 @@
 .document-detail {
   position:relative;
-  margin-top:1.3em;
+  margin-top:1.9em;
   margin-left:1em;
   padding:1em;
   padding-right:0;
@@ -12,7 +12,7 @@
   }
 
   h3 {
-    margin:1em 0 .5em;
+    margin:.5em 0;
     text-transform:uppercase;
     padding-right: 4px;
     position: relative;
